tests/baselines/reference/compoundAdditionAssignmentWithInvalidOperands.errors.txt
compoundAdditionAssignmentWithInvalidOperands.ts(6,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'void'.
compoundAdditionAssignmentWithInvalidOperands.ts(7,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'boolean'.
compoundAdditionAssignmentWithInvalidOperands.ts(8,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'number'.
compoundAdditionAssignmentWithInvalidOperands.ts(9,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'E'.
compoundAdditionAssignmentWithInvalidOperands.ts(10,1): error TS2365: Operator '+=' cannot be applied to types 'boolean' and '{}'.
compoundAdditionAssignmentWithInvalidOperands.ts(11,7): error TS18050: The value 'null' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(12,7): error TS18050: The value 'undefined' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(15,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'void'.
compoundAdditionAssignmentWithInvalidOperands.ts(16,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'boolean'.
compoundAdditionAssignmentWithInvalidOperands.ts(17,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'number'.
compoundAdditionAssignmentWithInvalidOperands.ts(18,1): error TS2365: Operator '+=' cannot be applied to types '{}' and 'E'.
compoundAdditionAssignmentWithInvalidOperands.ts(19,1): error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
compoundAdditionAssignmentWithInvalidOperands.ts(20,7): error TS18050: The value 'null' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(21,7): error TS18050: The value 'undefined' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(24,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'void'.
compoundAdditionAssignmentWithInvalidOperands.ts(25,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'boolean'.
compoundAdditionAssignmentWithInvalidOperands.ts(26,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'number'.
compoundAdditionAssignmentWithInvalidOperands.ts(27,1): error TS2365: Operator '+=' cannot be applied to types 'void' and 'E'.
compoundAdditionAssignmentWithInvalidOperands.ts(28,1): error TS2365: Operator '+=' cannot be applied to types 'void' and '{}'.
compoundAdditionAssignmentWithInvalidOperands.ts(29,7): error TS18050: The value 'null' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(30,7): error TS18050: The value 'undefined' cannot be used here.
compoundAdditionAssignmentWithInvalidOperands.ts(33,1): error TS2365: Operator '+=' cannot be applied to types 'number' and 'void'.
compoundAdditionAssignmentWithInvalidOperands.ts(34,1): error TS2365: Operator '+=' cannot be applied to types 'number' and 'boolean'.
compoundAdditionAssignmentWithInvalidOperands.ts(35,1): error TS2365: Operator '+=' cannot be applied to types 'number' and '{}'.
compoundAdditionAssignmentWithInvalidOperands.ts(38,1): error TS2365: Operator '+=' cannot be applied to types 'E' and 'void'.
compoundAdditionAssignmentWithInvalidOperands.ts(39,1): error TS2365: Operator '+=' cannot be applied to types 'E' and 'boolean'.
compoundAdditionAssignmentWithInvalidOperands.ts(40,1): error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.


==== compoundAdditionAssignmentWithInvalidOperands.ts (27 errors) ====
    enum E { a, b }
    
    declare var a: void;
    
    declare var x1: boolean;
    x1 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'void'.
    x1 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'boolean'.
    x1 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'number'.
    x1 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and 'E'.
    x1 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'boolean' and '{}'.
    x1 += null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x1 += undefined;
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    declare var x2: {};
    x2 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'void'.
    x2 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'boolean'.
    x2 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'number'.
    x2 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and 'E'.
    x2 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types '{}' and '{}'.
    x2 += null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x2 += undefined;
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    declare var x3: void;
    x3 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'void'.
    x3 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'boolean'.
    x3 += 0;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'number'.
    x3 += E.a;
    ~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and 'E'.
    x3 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'void' and '{}'.
    x3 += null;
          ~~~~
!!! error TS18050: The value 'null' cannot be used here.
    x3 += undefined;
          ~~~~~~~~~
!!! error TS18050: The value 'undefined' cannot be used here.
    
    declare var x4: number;
    x4 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and 'void'.
    x4 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and 'boolean'.
    x4 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'number' and '{}'.
    
    declare var x5: E;
    x5 += a;
    ~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and 'void'.
    x5 += true;
    ~~~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and 'boolean'.
    x5 += {};
    ~~~~~~~~
!!! error TS2365: Operator '+=' cannot be applied to types 'E' and '{}'.